Update homepage on package.json

--- a/level-1/package.json
+++ b/level-1/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://escapefromhyperisland.github.io/world-2/level-1/public/index.html/",
+  "homepage": "http://escapefromhyperisland.github.io/world-2/level-1/public/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
